--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: FactionsPro
-author: Tethered_
-description: 'A Plugin For Easily Managing Factions'
+author: StrafelessPvP
+description: PlexiumPE-FactionPro'
 version: 1.3.11-3
 main: FactionsPro\FactionMain
 api: 3.0.0-ALPHA9
